2009-07-14  Avi Drissman  <avi@chromium.org>

Reviewed by Darin Fisher.

        Explicitly mark the HTML generated for the Mac as being UTF-8 encoded.
        The Windows clipboard format is explicitly documented as being UTF-8,
        and all Linux apps assume UTF-8. On the Mac, though, unless otherwise
        indicated, Windows-1252 is assumed, which is wrong.

        Bug: https://bugs.webkit.org/show_bug.cgi?id=27262

        No new tests.

        * platform/chromium/ClipboardChromium.cpp:
        (WebCore::ClipboardChromium::writeRange):
        * platform/chromium/PasteboardChromium.cpp:
        (WebCore::Pasteboard::writeSelection):



Canonical link: https://commits.webkit.org/37508@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45878 268f45cc-cd09-0410-ab3c-d52691b4dbfc