WebCore/platform/chromium/ClipboardChromium.cpp
@@ -334,6 +334,9 @@ void ClipboardChromium::writeRange(Range* selectedRange, Frame* frame)
 
     m_dataObject->textHtml = createMarkup(selectedRange, 0,
         AnnotateForInterchange);
+#if PLATFORM(DARWIN)
+    m_dataObject->textHtml = String("<meta charset='utf-8'>") + m_dataObject->textHtml;
+#endif
     m_dataObject->htmlBaseUrl = frame->document()->url();
 
     String str = frame->selectedText();
