WebCore/platform/chromium/PasteboardChromium.cpp
@@ -71,6 +71,9 @@ void Pasteboard::clear()
 void Pasteboard::writeSelection(Range* selectedRange, bool canSmartCopyOrDelete, Frame* frame)
 {
     String html = createMarkup(selectedRange, 0, AnnotateForInterchange);
+#if PLATFORM(DARWIN)
+    html = String("<meta charset='utf-8'>") + html;
+#endif
     ExceptionCode ec = 0;
     KURL url = selectedRange->startContainer(ec)->document()->url();
     String plainText = frame->selectedText();
